# goro

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  fix_config.py  pyproject.toml  rename_project.py  update_imports.py
.windsurf/rules/: textual-css.md  textual-documentation.md
src/GitOps_Repo_Orchestrator/: cli.py
src/GitOps_Repo_Orchestrator/commands/: edit.py  status.py  sync.py
src/GitOps_Repo_Orchestrator/tui/: __init__.py  app.py
src/GitOps_Repo_Orchestrator/tui/widgets/: repo_details.py
src/app/: __init__.py  cli.py  config.py
src/app/commands/: edit.py  status.py  sync.py
src/app/tui/: app.py  utils.py
src/app/tui/css/: dialogs.tcss
src/app/tui/dialogs/: __init__.py  confirm_dialog.py  repo_dialog.py  status_dialog.py  sync_dialog.py
src/app/tui/widgets/: repo_details.py  status_bar.py
src/git_repo_manager/: __init__.py  cli.py
src/git_repo_manager/commands/: edit.py  status.py  sync.py
src/git_repo_manager/tui/: __init__.py  app.py  utils.py
src/git_repo_manager/tui/css/: dialogs.tcss  global.css
src/git_repo_manager/tui/dialogs/: __init__.py  add_repo_dialog.py  confirm_dialog.py  edit_repo_dialog.py  repo_dialog.py
src/git_repo_manager/tui/widgets/: __init__.py  repo_details.py  repo_list.py  status_bar.py
src/gitem/: __init__.py  cli.py  config.py
src/gitem/commands/: edit.py  status.py  sync.py
src/gitem/tui/: app.py
src/gitem/tui/dialogs/: confirm_dialog.py  status_dialog.py  sync_dialog.py
src/gitem/tui/widgets/: repo_details.py  status_bar.py
src/goro/: __init__.py  cli.py  config.py
src/goro/commands/: edit.py  status.py  sync.py
src/goro/tui/: app.py
src/goro/tui/dialogs/: __init__.py  confirm_dialog.py  repo_dialog.py  sync_dialog.py
src/goro/tui/widgets/: __init__.py  repo_details.py  repo_list.py  status_bar.py
